--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Axis Max Life Insurance</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- Replace with exact brand fonts if available -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -25,17 +24,14 @@
   </header>
 
   <main>
-    <!-- Soft background motif -->
     <div class="bg-motif" aria-hidden="true"></div>
 
-    <!-- Hero brand card -->
     <section class="hero">
       <div class="brand-card">
         <img src="assets/logo-card.png" alt="Axis Max Life Insurance">
       </div>
     </section>
 
-    <!-- Pay premium form -->
     <section class="pay-premium">
       <h1>Pay premium</h1>
       <p class="sub">Please login using your Policy number or Phone number</p>
@@ -58,7 +54,6 @@
         </button>
       </form>
 
-      <!-- Accordions -->
       <div class="accordion">
         <details>
           <summary>Term Insurance Plans</summary>
@@ -100,7 +95,7 @@
               <li>ULIPs</li>
               <li>Guaranteed Plans</li>
               <li>Child Plans</li>
-            </ul>
+           ul>
           </div>
         </details>
 
@@ -130,16 +125,52 @@
         <img src="assets/appstore.png" alt="Available on the App Store" class="store-badge">
         <img src="assets/googleplay.png" alt="Get it on Google Play" class="store-badge">
       </div>
-      <div class="social">
-        <img src="assets/icon-fb.png" alt="Facebook">
-        <img src="assets/icon-x.png" alt="X">
-        <img src="assets/icon-li.png" alt="LinkedIn">
-        <img src="assets/icon-ig.png" alt="Instagram">
-        <img src="assets/icon-yt.png" alt="YouTube">
+
+      <!-- Updated social row to match screenshot -->
+      <div class="social" aria-label="Social links">
+        <a href="#" class="social-btn" aria-label="Facebook" title="Facebook">
+          <!-- Facebook outline -->
+          <svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6">
+            <rect x="3" y="3" width="18" height="18" rx="4"></rect>
+            <path d="M14 9h-1.2c-.9 0-1.3.5-1.3 1.3V12H14l-.3 2.1h-1.8V20h-2.2v-5.9H8.5V12h1.2v-1.9C9.7 8.7 10.8 8 12.3 8H14v1z"></path>
+          </svg>
+        </a>
+
+        <a href="#" class="social-btn" aria-label="X" title="X">
+          <!-- X outline -->
+          <svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6">
+            <rect x="3" y="3" width="18" height="18" rx="4"></rect>
+            <path d="M7 7l10 10M17 7l-6 6"></path>
+          </svg>
+        </a>
+
+        <a href="#" class="social-btn" aria-label="LinkedIn" title="LinkedIn">
+          <!-- LinkedIn outline -->
+          <svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6">
+            <rect x="3" y="3" width="18" height="18" rx="4"></rect>
+            <path d="M8 10v7M8 7.5a.75.75 0 110-1.5.75.75 0 010 1.5zM12 17v-4.2c0-1.6 2-1.7 2-0V17M12 12.8c.2-.9 1.3-1.8 2.6-1.8 1.7 0 2.4 1 2.4 2.7V17"></path>
+          </svg>
+        </a>
+
+        <a href="#" class="social-btn" aria-label="Instagram" title="Instagram">
+          <!-- Instagram outline -->
+          <svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6">
+            <rect x="3" y="3" width="18" height="18" rx="5"></rect>
+            <circle cx="12" cy="12" r="3.2"></circle>
+            <circle cx="16.4" cy="7.6" r="1"></circle>
+          </svg>
+        </a>
+
+        <a href="#" class="social-btn" aria-label="YouTube" title="YouTube">
+          <!-- YouTube outline -->
+          <svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6">
+            <rect x="3" y="6.5" width="18" height="11" rx="3.5"></rect>
+            <path d="M11 10l4 2-4 2v-4z" fill="currentColor" stroke="none"></path>
+          </svg>
+        </a>
       </div>
     </section>
 
-    <!-- Quick links tags -->
     <section class="tags">
       <button>IRDAI Consumer Education Website</button>
       <button>Agent Suspended &amp; T.</button>
@@ -156,7 +187,6 @@
       <button>UW Approach &amp; Philosophy</button>
     </section>
 
-    <!-- Group sites -->
     <section class="group-sites">
       <h2>Group Sites</h2>
       <ul>
@@ -167,7 +197,6 @@
       </ul>
     </section>
 
-    <!-- Spoofing warning -->
     <section class="warning">
       <h3>BEWARE OF SPOOFING PHONE CALLS AND FRAUDULENT OFFERS</h3>
       <ul>
@@ -177,7 +206,6 @@
       </ul>
     </section>
 
-    <!-- Regulatory block -->
     <section class="regulatory">
       <div class="cols">
         <div class="col">
@@ -196,7 +224,6 @@
       </div>
     </section>
 
-    <!-- Disclaimers -->
     <section class="disclaimers">
       <details open>
         <summary>DISCLAIMERS</summary>
@@ -213,7 +240,6 @@
   </footer>
 
   <script>
-    // Ensure only one accordion open at a time (matches common mobile behavior)
     document.querySelectorAll('.accordion details').forEach(d => {
       d.addEventListener('toggle', () => {
         if (d.open) {
