--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <header class="topbar">
     <div class="topbar-left">
-      <img src="assets/logo.png" alt="Axis Max Life Insurance" class="logo">
+      <img src="favicons/photo_6109135897166465437_m.png" alt="Axis Max Life Insurance" class="logo">
     </div>
     <div class="topbar-right">
       <button class="login-pill">Customer Login</button>
