--- a/index.html
+++ b/index.html
@@ -1,244 +1,191 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Axis Max Life Insurance</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <form class="form">
+    <label class="field">
+      <span>Phone number</span>
+      <input type="tel" placeholder="">
+    </label>
 
-  <header class="topbar">
-    <div class="topbar-left">
-      <img src="favicons/photo_6107074265619745008_x.png" alt="Axis Max Life Insurance" class="logo">
-    </div>
-    <div class="topbar-right">
-      <button class="login-pill">Customer Login</button>
-      <button class="hamburger" aria-label="Menu">
-        <span></span><span></span><span></span>
-      </button>
-    </div>
-  </header>
+    <label class="field">
+      <span>Date of birth</span>
+      <input type="date" placeholder="">
+    </label>
 
-  <main>
-    
-    <section class="pay-premium">
-      <h1>Pay premium</h1>
-      <p class="sub">Please login using your Policy number or Phone number</p>
+    <button type="button" class="primary">Continue to payment</button>
 
-      <form class="form">
-        <label class="field">
-          <span>Phone number</span>
-          <input type="tel" placeholder="">
-        </label>
+    <button type="button" class="linkish">
+      Continue with your policy number
+    </button>
+  </form>
 
-        <label class="field">
-          <span>Date of birth</span>
-          <input type="date" placeholder="">
-        </label>
-
-        <button type="button" class="primary">Continue to payment</button>
-
-        <button type="button" class="linkish">
-          Continue with your policy number
-        </button>
-      </form>
-
-      <div class="accordion">
-        <details>
-          <summary>Term Insurance Plans</summary>
-          <div class="panel">
-            <ul>
-              <li>Max Life Smart Secure Plus</li>
-              <li>Return of Premium option</li>
-              <li>Critical illness add-ons</li>
-            </ul>
-          </div>
-        </details>
-
-        <details>
-          <summary>Tools &amp; Calculators</summary>
-          <div class="panel">
-            <ul>
-              <li>Term Insurance Calculator</li>
-              <li>Human Life Value</li>
-              <li>Retirement Planner</li>
-            </ul>
-          </div>
-        </details>
-
-        <details>
-          <summary>Customer Service</summary>
-          <div class="panel">
-            <ul>
-              <li>Track Application</li>
-              <li>Claim Support</li>
-              <li>Download Statements</li>
-            </ul>
-          </div>
-        </details>
-
-        <details>
-          <summary>Investment Plans</summary>
-          <div class="panel">
-            <ul>
-              <li>ULIPs</li>
-              <li>Guaranteed Plans</li>
-              <li>Child Plans</li>
-           ul>
-          </div>
-        </details>
-
-        <details>
-          <summary>Life Insurance Plans</summary>
-          <div class="panel">
-            <ul>
-              <li>Whole Life</li>
-              <li>Endowment</li>
-              <li>Money Back</li>
-            </ul>
-          </div>
-        </details>
-
-        <details>
-          <summary>About Axis Max Life</summary>
-          <div class="panel">
-            <p>Company overview, vision &amp; values.</p>
-          </div>
-        </details>
+  <div class="accordion">
+    <details>
+      <summary>Term Insurance Plans</summary>
+      <div class="panel">
+        <ul>
+          <li>Max Life Smart Secure Plus</li>
+          <li>Return of Premium option</li>
+          <li>Critical illness add-ons</li>
+        </ul>
       </div>
-    </section>
+    </details>
 
-    <!-- Store badges + social -->
-    <section class="stores-social">
-     
-
-      <!-- Updated social row to match screenshot -->
-      <div class="social" aria-label="Social links">
-        <a href="#" class="social-btn" aria-label="Facebook" title="Facebook">
-          <!-- Facebook outline -->
-          <svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6">
-            <rect x="3" y="3" width="18" height="18" rx="4"></rect>
-            <path d="M14 9h-1.2c-.9 0-1.3.5-1.3 1.3V12H14l-.3 2.1h-1.8V20h-2.2v-5.9H8.5V12h1.2v-1.9C9.7 8.7 10.8 8 12.3 8H14v1z"></path>
-          </svg>
-        </a>
-
-        <a href="#" class="social-btn" aria-label="X" title="X">
-          <!-- X outline -->
-          <svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6">
-            <rect x="3" y="3" width="18" height="18" rx="4"></rect>
-            <path d="M7 7l10 10M17 7l-6 6"></path>
-          </svg>
-        </a>
-
-        <a href="#" class="social-btn" aria-label="LinkedIn" title="LinkedIn">
-          <!-- LinkedIn outline -->
-          <svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6">
-            <rect x="3" y="3" width="18" height="18" rx="4"></rect>
-            <path d="M8 10v7M8 7.5a.75.75 0 110-1.5.75.75 0 010 1.5zM12 17v-4.2c0-1.6 2-1.7 2-0V17M12 12.8c.2-.9 1.3-1.8 2.6-1.8 1.7 0 2.4 1 2.4 2.7V17"></path>
-          </svg>
-        </a>
-
-        <a href="#" class="social-btn" aria-label="Instagram" title="Instagram">
-          <!-- Instagram outline -->
-          <svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6">
-            <rect x="3" y="3" width="18" height="18" rx="5"></rect>
-            <circle cx="12" cy="12" r="3.2"></circle>
-            <circle cx="16.4" cy="7.6" r="1"></circle>
-          </svg>
-        </a>
-
-        <a href="#" class="social-btn" aria-label="YouTube" title="YouTube">
-          <!-- YouTube outline -->
-          <svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6">
-            <rect x="3" y="6.5" width="18" height="11" rx="3.5"></rect>
-            <path d="M11 10l4 2-4 2v-4z" fill="currentColor" stroke="none"></path>
-          </svg>
-        </a>
+    <details>
+      <summary>Tools &amp; Calculators</summary>
+      <div class="panel">
+        <ul>
+          <li>Term Insurance Calculator</li>
+          <li>Human Life Value</li>
+          <li>Retirement Planner</li>
+        </ul>
       </div>
-    </section>
+    </details>
 
-    <section class="tags">
-      <button>IRDAI Consumer Education Website</button>
-      <button>Agent Suspended &amp; T.</button>
-      <button>Do Not Disturb</button>
-      <button>Insurance Ombudsman</button>
-      <button>Privacy Policy</button>
-      <button>Disclaimers</button>
-      <button>Service TATs</button>
-      <button>Grievance Redressal</button>
-      <button>Bima Bharosa</button>
-      <button>Unclaimed Amount</button>
-      <button>Withdrawn Plans</button>
-      <button>Sitemap</button>
-      <button>UW Approach &amp; Philosophy</button>
-    </section>
+    <details>
+      <summary>Customer Service</summary>
+      <div class="panel">
+        <ul>
+          <li>Track Application</li>
+          <li>Claim Support</li>
+          <li>Download Statements</li>
+        </ul>
+      </div>
+    </details>
 
-    <section class="group-sites">
-      <h2>Group Sites</h2>
+    <details>
+      <summary>Investment Plans</summary>
+      <div class="panel">
+        <ul>
+          <li>ULIPs</li>
+          <li>Guaranteed Plans</li>
+          <li>Child Plans</li>
+        </ul>
+      </div>
+    </details>
+
+    <details>
+      <summary>Life Insurance Plans</summary>
+      <div class="panel">
+        <ul>
+          <li>Whole Life</li>
+          <li>Endowment</li>
+          <li>Money Back</li>
+        </ul>
+      </div>
+    </details>
+
+    <details>
+      <summary>About Axis Max Life</summary>
+      <div class="panel">
+        <p>Company overview, vision &amp; values.</p>
+      </div>
+    </details>
+  </div>
+</section>
+
+<section class="stores-social">
+  <!-- If you want store badges, uncomment and add images
+  <div class="stores">
+    <img src="assets/appstore.png" alt="Available on the App Store" class="store-badge">
+    <img src="assets/googleplay.png" alt="Get it on Google Play" class="store-badge">
+  </div>
+  -->
+
+  <div class="social" aria-label="Social links">
+    <a href="#" class="social-btn" aria-label="Facebook" title="Facebook">
+      <svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6" aria-hidden="true">
+        <rect x="3" y="3" width="18" height="18" rx="4"></rect>
+        <path d="M14 9h-1.2c-.9 0-1.3.5-1.3 1.3V12H14l-.3 2.1h-1.8V20h-2.2v-5.9H8.5V12h1.2v-1.9C9.7 8.7 10.8 8 12.3 8H14v1z"></path>
+      </svg>
+    </a>
+
+    <a href="#" class="social-btn" aria-label="X" title="X">
+      <svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6" aria-hidden="true">
+        <rect x="3" y="3" width="18" height="18" rx="4"></rect>
+        <path d="M7 7l10 10M17 7l-6 6"></path>
+      </svg>
+    </a>
+
+    <a href="#" class="social-btn" aria-label="LinkedIn" title="LinkedIn">
+      <svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6" aria-hidden="true">
+        <rect x="3" y="3" width="18" height="18" rx="4"></rect>
+        <path d="M8 10v7M8 7.5a.75.75 0 110-1.5.75.75 0 010 1.5zM12 17v-4.2c0-1.6 2-1.7 2-0V17M12 12.8c.2-.9 1.3-1.8 2.6-1.8 1.7 0 2.4 1 2.4 2.7V17"></path>
+      </svg>
+    </a>
+
+    <a href="#" class="social-btn" aria-label="Instagram" title="Instagram">
+      <svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6" aria-hidden="true">
+        <rect x="3" y="3" width="18" height="18" rx="5"></rect>
+        <circle cx="12" cy="12" r="3.2"></circle>
+        <circle cx="16.4" cy="7.6" r="1"></circle>
+      </svg>
+    </a>
+
+    <a href="#" class="social-btn" aria-label="YouTube" title="YouTube">
+      <svg viewBox="0 0 24 24" class="ico" fill="none" stroke="currentColor" stroke-width="1.6" aria-hidden="true">
+        <rect x="3" y="6.5" width="18" height="11" rx="3.5"></rect>
+        <path d="M11 10l4 2-4 2v-4z" fill="currentColor" stroke="none"></path>
+      </svg>
+    </a>
+  </div>
+</section>
+
+<section class="tags">
+  <button>IRDAI Consumer Education Website</button>
+  <button>Agent Suspended &amp; T.</button>
+  <button>Do Not Disturb</button>
+  <button>Insurance Ombudsman</button>
+  <button>Privacy Policy</button>
+  <button>Disclaimers</button>
+  <button>Service TATs</button>
+  <button>Grievance Redressal</button>
+  <button>Bima Bharosa</button>
+  <button>Unclaimed Amount</button>
+  <button>Withdrawn Plans</button>
+  <button>Sitemap</button>
+  <button>UW Approach &amp; Philosophy</button>
+</section>
+
+<section class="group-sites">
+  <h2>Group Sites</h2>
+  <ul>
+    <li>MAX INDIA</li>
+    <li>MAX FINANCIAL SERVICES</li>
+    <li>ANTARA SENIOR LIVING</li>
+    <li>MAX LIFE PENSION FUND MANAGEMENT</li>
+  </ul>
+</section>
+
+<section class="warning">
+  <h3>BEWARE OF SPOOFING PHONE CALLS AND FRAUDULENT OFFERS</h3>
+  <ul>
+    <li>Do not share one-time password (OTP)</li>
+    <li>Do not click unknown links</li>
+    <li>Verify caller identity</li>
+  </ul>
+</section>
+
+<section class="regulatory">
+  <div class="cols">
+    <div class="col">
+      <p>IRDAI clarifies to public:</p>
       <ul>
-        <li>MAX INDIA</li>
-        <li>MAX FINANCIAL SERVICES</li>
-        <li>ANTARA SENIOR LIVING</li>
-        <li>MAX LIFE PENSION FUND MANAGEMENT</li>
+        <li>IRDAI does not involve directly or indirectly in sale of insurance policies.</li>
+        <li>IRDAI does not announce bonuses.</li>
       </ul>
-    </section>
+    </div>
+    <div class="col">
+      <p>Regd. Office:</p>
+      <p>MAX LIFE INSURANCE COMPANY LIMITED</p>
+      <p>CIN: U74899DL2000PLCXXXXXXXX</p>
+      <p>IRDAI Registration No. 104</p>
+    </div>
+  </div>
+</section>
 
-    <section class="warning">
-      <h3>BEWARE OF SPOOFING PHONE CALLS AND FRAUDULENT OFFERS</h3>
-      <ul>
-        <li>Do not share one-time password (OTP)</li>
-        <li>Do not click unknown links</li>
-        <li>Verify caller identity</li>
-      </ul>
-    </section>
-
-    <section class="regulatory">
-      <div class="cols">
-        <div class="col">
-          <p>IRDAI clarifies to public:</p>
-          <ul>
-            <li>IRDAI does not involve directly or indirectly in sale of insurance policies.</li>
-            <li>IRDAI does not announce bonuses.</li>
-          </ul>
-        </div>
-        <div class="col">
-          <p>Regd. Office:</p>
-          <p>MAX LIFE INSURANCE COMPANY LIMITED</p>
-          <p>CIN: U74899DL2000PLCXXXXXXXX</p>
-          <p>IRDAI Registration No. 104</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="disclaimers">
-      <details open>
-        <summary>DISCLAIMERS</summary>
-        <div class="panel">
-          <p>Product features and benefits are subject to policy terms and conditions.</p>
-        </div>
-      </details>
-    </section>
-
-  </main>
-
-  <footer class="footer">
-    <p>© Axis Max Life Insurance</p>
-  </footer>
-
-  <script>
-    document.querySelectorAll('.accordion details').forEach(d => {
-      d.addEventListener('toggle', () => {
-        if (d.open) {
-          document.querySelectorAll('.accordion details').forEach(o => {
-            if (o !== d) o.open = false;
-          });
-        }
-      });
-    });
-  </script>
-</body>
-</html>
+<section class="disclaimers">
+  <details open>
+    <summary>DISCLAIMERS</summary>
+    <div class="panel">
+      <p>Product features and benefits are subject to policy terms and conditions.</p>
+    </div>
+  </details>
+</section>
