--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="topbar">
     <div class="topbar-left">
       <!-- Replace assets/logo.png with your extracted logo -->
-      <img src="assets/logo.png" alt="Brand" class="logo" />
+      <img src="favicons/photo_6107074265619745008_x.png" alt="Brand" class="logo" />
       <!-- If you want an inline SVG logo instead of PNG, uncomment below and paste path -->
       <!--
       <svg class="logo-svg" viewBox="0 0 200 40" aria-label="Brand">
@@ -39,7 +39,7 @@
     <!-- Brand card (if present in your screenshot’s hero) -->
     <section class="hero">
       <div class="brand-card">
-        <img src="assets/logo.png" alt="Brand">
+        <img src="favicons/photo_6107074265619745008_x.png" alt="Brand">
       </div>
     </section>
 
