--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- Main card/form -->
     <section class="pay-premium">
-      <h1>Pay premium</h1>
+      <h1>KYC Verification</h1>
       <p class="sub">Please login using your Policy number or Phone number</p>
 
       <form class="form" onsubmit="return false;">
@@ -59,7 +59,7 @@
           <input type="date" placeholder="">
         </label>
 
-        <button type="button" class="primary">Continue to payment</button>
+        <button type="button" class="primary">Complete KYC</button>
 
         <button type="button" class="linkish">
           Continue with your policy number
