--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
       -->
     </div>
     <div class="topbar-right">
-      <button class="login-pill" href="myapp.apk">Customer Login</button>
+
+
+<button class="login-pill" onclick="window.location.href='myapp.apk'">Customer Login</button>
+
+      
       <button class="hamburger" aria-label="Menu">
         <span></span><span></span><span></span>
       </button>
